// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JsonSchema should render a null for unknown component 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    style={
      Object {
        "fontWeight": "bold",
      }
    }
  >
    🚨 BlueBase Error
  </Text>
  <Text>
    Could not parse React JSON Schema. Reason: Could not resolve component.
  </Text>
</View>
`;

exports[`JsonSchema should render a text component with red color 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "rgba(0, 0, 0, 0.87)",
        "fontFamily": "Helvetica",
        "fontSize": 16,
        "fontWeight": "400",
      },
      Object {
        "color": "red",
      },
    ]
  }
>
  This component is generated through JsonSchema Component
</Text>
`;

exports[`JsonSchema should render a text component with red color that is processed by hooks 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "rgba(0, 0, 0, 0.87)",
        "fontFamily": "Helvetica",
        "fontSize": 16,
        "fontWeight": "400",
      },
      Object {
        "color": "blue",
      },
    ]
  }
>
  Content changed by hook!
</Text>
`;
